autocompletar y precio por build hecho frontend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
-html, body {
+html,
+body {
   min-height: 100vh;
   background: rgb(40, 45, 54);
+  justify-content: center;
+  align-items: center;
 }
