--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -2,4 +2,10 @@
     background-image: url(./cloud.png);
     background-position: center center;
     background-size: cover;
+    height: 100vh;
 }
+#centered {
+    height: 100vh; /* Magic here */
+    justify-content: center;
+    align-items: center;
+  }
