--- a/client/src/components/PcBuilder.css
+++ b/client/src/components/PcBuilder.css
@@ -2,3 +2,8 @@ h1{
   color: #faf6f6;
   text-align: center;
 }
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
