--- a/client/src/components/Marketplace.css
+++ b/client/src/components/Marketplace.css
@@ -57,15 +57,23 @@ Marketplace {
     border-radius: 0%;
 }
 
+.Marketplace .searcher, .search-wrapper, .search-form {
+    width: 100%;
+    max-width: none;
+}
+
 .Marketplace .search-input {
     border: none;
-    padding: 5px 15px 5px;
+    padding: 5px 15px 5px 20px;
     font-family: 'Mukta', sans-serif;
     font-weight: 300;
     font-size: 28px;
     display: flex;
     width: 100%;
     min-width: 250px;
+    max-width: none;
+    border-top-left-radius: 999px;
+    border-bottom-left-radius: 999px;
 }
 
 .Marketplace .selectBtn {
@@ -81,14 +89,11 @@ Marketplace {
 }
 
 .Marketplace .selectBtn:active {
-    color: #a09f9f;
+    color: #20f299;
 }
 
 .Marketplace .search-header {
-    justify-content: space-between;
-    align-items: center;
     display: flex;
-    border-radius: 999px;
     width: 100%;
     margin: 20px;
 }
@@ -114,10 +119,13 @@ Marketplace {
     justify-content: center;
     align-items: center;
     vertical-align: middle;
+    margin-right: 40px;
+    border-top-right-radius: 999px;
+    border-bottom-right-radius: 999px;
 }
 
 .Marketplace .checkBox {
-    margin: 10px;
+    margin: 0px 10px;
     vertical-align: middle;
     width: 25px;
     height: 25px;
