--- a/client/src/components/PaginaPagar.css
+++ b/client/src/components/PaginaPagar.css
@@ -43,7 +43,7 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
 .PaginaPagar .list {
     background-color: #e9eaea;
     color: #222225;
-    padding: 50px;
+    padding: 25px 50px;
     border-radius: 20px;
     width: 100%;
 }
@@ -52,12 +52,15 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
     font-family: 'Mukta', sans-serif;
     font-weight: 400;
     font-size: 32px;
+    margin: auto;
 }
 
 .PaginaPagar .productName {
     font-family: 'Mukta', sans-serif;
     font-weight: 400;
     font-size: 20px;
+    text-align: center;
+    margin: auto;
 }
 
 .PaginaPagar .priceType {
@@ -65,6 +68,8 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
     font-weight: 400;
     font-size: 20px;
     text-decoration: underline;
+    text-align: right;
+    margin: auto;
 }
 
 .PaginaPagar .priceType:hover {
@@ -79,12 +84,20 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
     font-family: 'Mukta', sans-serif;
     font-weight: 400;
     font-size: 20px;
+    text-align: right;
+    margin: auto;
+}
+
+.PaginaPagar .totalRow {
+    height: 49px;
 }
 
 .PaginaPagar .total {
+    text-align: right;
     font-family: 'Mukta', sans-serif;
     font-weight: 600;
     font-size: 20px;
+    margin: auto;
 }
 
 .PaginaPagar .horizontalLine {
@@ -93,5 +106,20 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
     height: 1px;
 }
 
+.PaginaPagar .navBtn {
 
+    float: right;
+    font-family: 'Mukta', sans-serif;
+    font-weight: 400;
+    font-size: 25px;
+    color: #222225;
+    background-color: #ffffff;
+    border: 2.5px solid #20f299;
+}
+
+.PaginaPagar .navBtn:active {
+    opacity: 100%;
+    background-color: #20f299;
+    border-color: #20f299;
+}
 
