pagina de inicio de sesion con diseño terminado

--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,7 +1,8 @@
 .bg{
-    background-image: url(./cloud.png);
+    background-image: url(./logo.svg);
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     height: 100vh;
 }
 #centered {
@@ -9,3 +10,38 @@
     justify-content: center;
     align-items: center;
   }
+
+.container-with-bg {
+    background-color:rgb(40, 45, 54); /* Puedes cambiar el color a tu preferencia */
+}
+
+/* Combina las clases de Bootstrap con tu clase personalizada */
+.container-with-bg.w-75 {
+    width: 75%;
+}
+
+.container-with-bg.rounded {
+    border-radius: 0.25rem; /* Puedes ajustar el radio según tus preferencias */
+}
+
+.container-with-bg.shadow {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Puedes ajustar la sombra según tus preferencias */
+}
+
+.container-with-bg.mt-3 {
+    margin-top: 1rem;
+}
+
+/* Aplica el nuevo color personalizado a los botones de Bootstrap */
+.btn-custom-color {
+    border-color: #20f299 !important;
+    color: #ffffff !important;
+}
+
+/* Estilos adicionales para hover o focus si lo deseas */
+.btn-custom-color:hover,
+.btn-custom-color:focus {
+    background-color: #20f299 !important; /* Puedes ajustar el color al hacer hover o focus */
+    border-color: #20f299 !important;
+    color: #ffffff !important;
+}
