corregido el color background de la pagina entera

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  background: rgb(40, 45, 54);
+  background: #222225;
   justify-content: center;
   align-items: center;
   height: 100%;
