--- a/client/src/components/PaginaPagar.css
+++ b/client/src/components/PaginaPagar.css
@@ -188,7 +188,7 @@ html:has(.PaginaPagar), :has(.PaginaPagar) {
 @media (max-width: 800px) {
 
     .PaginaPagar .mainWrapper {
-        padding: 0px 0px 10px;
+        padding: 10px 0px;
     }
 
     .PaginaPagar .title {
