--- a/client/src/components/Marketplace.css
+++ b/client/src/components/Marketplace.css
@@ -15,7 +15,7 @@ html:has(.Marketplace), body:has(.Marketplace) {
 }
 
 .custom-color {
-    border-color: #20f299 !important;
+    border: 2.5px solid #20f299;
     color: #ffffff !important;
     font-family: 'Mukta', sans-serif !important;
     font-weight: 300 !important;
@@ -29,6 +29,12 @@ html:has(.Marketplace), body:has(.Marketplace) {
     background-color: #20f299 !important; /* Puedes ajustar el color al hacer hover o focus */
     border-color: #20f299 !important;
     color: #ffffff !important;
+}
+
+.custom-color:active {
+    color: #222225 !important;
+    background-color: #ffffff !important;
+    border-color: #ffffff !important;
 }
 
 .Marketplace .search-header {
@@ -48,7 +54,7 @@ html:has(.Marketplace), body:has(.Marketplace) {
     padding: 5px 15px 5px 20px;
     font-family: 'Mukta', sans-serif;
     font-weight: 300;
-    font-size: 28px;
+    font-size: 26px;
     width: 100%;
     min-width: 250px;
     border-top-left-radius: 999px;
@@ -75,7 +81,7 @@ html:has(.Marketplace), body:has(.Marketplace) {
     background-color: #222225;
     color: #ffffff;
     font-weight: 300;
-    font-size: 28px;
+    font-size: 26px;
     padding: 10px 10px;
     accent-color: #20f299;
     justify-content: center;
@@ -148,5 +154,26 @@ html:has(.Marketplace), body:has(.Marketplace) {
 .Marketplace .noRes {
     font-family: 'Mukta', sans-serif;
     color: #222225;
+}
+
+@media (max-width: 1000px) {
+
+    .custom-color {
+        font-size: 20px !important;
+    }
+
+    .Marketplace .search-input {
+        font-size: 20px;
+        padding: 6.5px 10px 6.5px 15px;
+    }
+
+    .Marketplace .mb-3 {
+        font-size: 20px;
+    }
+
+    .Marketplace .search-header {
+        margin: 20px 20px 0px;
+    }
+
 }
 
